--- a/index.html
+++ b/index.html
@@ -138,6 +138,29 @@
         </div>
     </div>
 
+    <!-- Modal de confirmation de suppression -->
+    <div id="delete-confirm-modal" class="modal" style="display: none;">
+        <div class="modal-content modal-confirm">
+            <div class="modal-header">
+                <h2>Confirmer la suppression</h2>
+                <button class="modal-close" aria-label="Fermer">&times;</button>
+            </div>
+            <div class="confirm-message">
+                <p id="delete-confirm-text"></p>
+            </div>
+            <div class="modal-actions">
+                <button type="button" class="btn btn-confirm" id="confirm-delete-btn">
+                    <span class="btn-icon">✓</span>
+                    Confirmer
+                </button>
+                <button type="button" class="btn btn-cancel-delete" id="cancel-delete-btn">
+                    <span class="btn-icon">✕</span>
+                    Annuler
+                </button>
+            </div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
